--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 			includeGroup 'maven.modrinth'
 		}
 	}
+	maven {url 'https://libs.azuredoom.com:4443/mods'}
 	maven { url 'https://maven.kosmx.dev/' }
 	maven { url 'https://maven.shedaniel.me/' }
 	maven { url 'https://jitpack.io' }
@@ -68,7 +69,7 @@ dependencies {
 	// Dependencies
 
 	implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
-	modImplementation("software.bernie.geckolib:geckolib-fabric-${project.gecko_mc_prefix}${project.gecko_lib_version_fabric}")
+	modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:1.0.29"
 	modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
 	modImplementation("maven.modrinth:spell-power:${project.spell_power_version}-fabric")
 	modImplementation("maven.modrinth:runes:${project.runes_version}-fabric")
