forgot to update in a while - oops :)

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ forge_version=1.20.1-47.1.0
 # Mod
 maven_group=net
 archives_base_name=spellbladenext
-mod_version=1.15.1
+mod_version=1.17.1
 
 
 
@@ -29,3 +29,4 @@ mixin_extras_version=0.1.1
 cloth_config_version=11.1.106
 player_anim_version=1.0.2+1.19.4
 trinkets_version=3.7.0
+cca_version=5.2.2
