--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.3-SNAPSHOT'
+	id 'fabric-loom' version '1.6-SNAPSHOT'
 	id 'maven-publish'
 	id "com.github.johnrengelman.shadow" version "7.1.2"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
@@ -13,6 +13,42 @@ group = project.maven_group
 base {
 	archivesName = project.archives_base_name
 }
+
+if(project.hasProperty('release_type')) {
+	tasks.register("publishMod") {
+		dependsOn(build)
+		finalizedBy(tasks.curseforge)
+		finalizedBy(tasks.modrinth)
+		finalizedBy(tasks.githubRelease)
+	}
+
+	curseforge {
+		apiKey = System.getenv("CURSEFORGE_API_KEY")
+		project {
+			id = System.getenv("CURSEFORGE_PROJECT_ID")
+			changelog = changelog_last_section()
+			changelogType = 'markdown'
+			releaseType = release_type
+			addGameVersion "${project.minecraft_version}"
+			addGameVersion "Fabric"
+
+			relations {
+				requiredDependency 'fabric-api'
+				requiredDependency 'azurelib'
+				requiredDependency 'spell-engine'
+				requiredDependency 'ranged-weapon'
+				requiredDependency 'extraspellattributes'
+			}
+
+			mainArtifact(remapJar)
+			afterEvaluate {
+				uploadTask.dependsOn(remapJar)
+			}
+			options {
+				forgeGradleIntegration = false
+			}
+		}
+	}
 
 repositories {
 	maven { url 'https://jitpack.io' }
@@ -67,7 +103,8 @@ dependencies {
 	// modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version_api}"
 
 	// Dependencies
-
+	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 	implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
 
 	modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:1.0.29"
