--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ if(project.hasProperty('release_type')) {
 				requiredDependency 'fabric-api'
 				requiredDependency 'azurelib'
 				requiredDependency 'spell-engine'
-				requiredDependency 'ranged-weapon'
+				requiredDependency 'ranged-weapon-api'
 				requiredDependency 'extraspellattributes'
 			}
 
