--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ if(project.hasProperty('release_type')) {
 				requiredDependency 'azurelib'
 				requiredDependency 'spell-engine'
 				requiredDependency 'ranged-weapon-api'
-				requiredDependency 'extraspellattributes'
+				requiredDependency 'extra-spell-attributes'
 			}
 
 			mainArtifact(remapJar)
@@ -69,7 +69,7 @@ if(project.hasProperty('release_type')) {
 			required.project 'azurelib'
 			required.project 'spell-engine'
 			required.project 'ranged-weapon-api'
-			required.project 'extraspellattributes'
+			required.project 'extra-rpg-attributes'
 		}
 	}
 
