--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ forge_version=1.20.1-47.1.0
 # Mod
 maven_group=net
 archives_base_name=spellbladenext
-mod_version=1.20.0
+mod_version=1.21.2+1.20.1
 
 
 
